--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
                     <h5>Password</h5>
                     <form>
-                        <i class="fa fa-lock" style="font-size:24px;"></i>
+                        <i class="fa fa-lock" ></i>
                         <input type="password" id="password"class="my-3" required>
-                        <i class=" fa fa-eye" onclick="togglepassword()" style="font-size:24px;"></i><br>
+                        <i class=" fa fa-eye" onclick="togglepassword()" ></i><br>
                         <input type="checkbox"><p class="d-inline">Stay signed in</p>
                         <button class="btn btn-primary">Continue</button><br>
                         
